# haskell-dojo

./: .editorconfig  .gitignore  README.md  cabal.project
fpinscala/: fpinscala.cabal
fpinscala/src/: Exercise_2_1.hs  Exercise_2_2.hs  Exercise_2_3.hs  Exercise_2_4.hs  Exercise_2_5.hs
fpinscala/test/: Exercise_2_1_Spec.hs  Exercise_2_2_Spec.hs  Exercise_2_3_Spec.hs  Exercise_2_4_Spec.hs  Exercise_2_5_Spec.hs
