cabal-version: 3.0

name: fpinscala
version: 0.0.0
description:
  Exercises from "Functional Programming in Scala" book done in Haskell.

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Exercise_2_1
  build-depends:
      base >=4.0 && <5.0

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Exercise_2_1_Spec
  build-depends:
      base
    , fpinscala
    , hspec >=2.9 && <3.0
  build-tool-depends:
      hspec-discover:hspec-discover >=2.9 && <3.0
