cabal-version: 3.0

name: fpinscala
version: 0.0.0
description:
  Exercises from "Functional Programming in Scala" book done in Haskell.

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Exercise_2_1
    Exercise_2_2
  build-depends:
      array >=0.5 && <0.6
    , base >=4.0 && <5.0
    , lens >=5.1 && <5.2

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Exercise_2_1_Spec
    Exercise_2_2_Spec
  build-depends:
      array
    , base
    , fpinscala
    , hspec >=2.9 && <2.10
  build-tool-depends:
      hspec-discover:hspec-discover >=2.9 && <2.10
